# Tst

./: README.md  config.example.toml  poc_window_highlight.py  pyi_rth_mlx.py  pyproject.toml  tst.entitlements  tst.spec  ttstt.spec
.claude/commands/: meeting-start.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  sample_context_us_travel.md
scripts/: bench_asr.py  release.sh
src/tst/: __init__.py  __main__.py  app.py  asr.py  config.py  hotkey.py  meeting.py  postprocess.py  settings.py  updates.py
src/ttstt/: __init__.py  __main__.py  app.py  asr.py  audio.py  clipboard.py  config.py  highlight.py  hotkey.py  meeting.py  postprocess.py  settings.py  sounds.py  updates.py
